# meyero

./: .env.example  .gitignore  README.md  docker-compose.yaml
client/: Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
client/public/: index.html
server/: Cargo.toml  Dockerfile  docker-compose.yaml
server/.sqlx/: query-0c9764cacaf7878452a3b8d2a889c54e1b43ad2d8b6216c6ea280f417200ca96.json  query-4001c700d4659d8bfd89bc2b9baaf68a0d47ab2ef5ba4e74e7afeec0be566d57.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-60e14fbcb53b95a1b7ed983f065c3cc9d09e6bb1da6e13bd8d3fdec2cbedaec3.json  query-678d75f6b9a5c9586bc354bb905a1c9f340ad9c7fa4f0e9b8ebb69dca3fb7177.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-ad9ffd15714e5fe46a8a6302b924e5ad813c2bd5806f931496e9c3529bc7804a.json  query-b2116f9843bb5c93c2a12a1475583cef7ddcd4910ed3f3881401c659d39f502c.json  query-cd9b35ef9e8e5cb4242d47a672f22070f9bcfad7c3a5c3a3e5fdbf6210db10b5.json  query-eb918617accf8a08f9878fd8ecb321ba7a8e4bc9b14b4c739389d7f6bde39022.json
server/migrations/: 20240904094117_create_users.sql  20241224123021_jwt_token.sql  20250124101611_create_message_table.sql  20250211144515_create_session_table.sql  20250211144808_create_refresh_token_table.sql  20250211145052_alter_token_table.sql  20250701100505_create_group.sql
server/src/: auth.rs  handler.rs  julia.rs  lib.rs  main.rs  websocket.rs  ws_handler.rs
server/src/models/: group_model.rs  message_model.rs  mod.rs  user_model.rs
server/src/repository/: group_repository.rs  message_repository.rs  mod.rs  user_repository.rs
server/src/routes/: group_routes.rs  message_routes.rs  mod.rs  user_routes.rs
server/src/service/: user_service.rs
server/tests/: health_check.rs
(+35 files in other folders)
