[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"

[[bin]]
path = "src/main.rs"
name = "server"
