[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid", "time"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
uuid = "1.11.0"

[[bin]]
path = "src/main.rs"
name = "server"
