[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = {version = "0.4.23", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
rand_core = "0.6.4"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-async-std-native-tls", "uuid", "chrono"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
uuid = {version = "1.11.0", features = ["serde"]}

[[bin]]
path = "src/main.rs"
name = "server"
